# abc-client

./: .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
.testrepository/: 0  1  2  failing  times.dbm
abc_client/: runner.py  settings.py  utils.py
abc_client/client/: client.py  rest.py
abc_client/service/: add.py  rm.py
abc_client/tests/: utils.py
abc_client/tests/integration/: test_init.py
specs/: main.md
travis-ci-scripts/: prepare-server.sh
